--- a/package.json
+++ b/package.json
@@ -1,16 +1,24 @@
 {
-  "engines":{
-    "node":"22.19.0"
-  },
   "name": "major-project",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "A full-stack Airbnb-style web app built using Node.js, Express, MongoDB, Cloudinary, and Leaflet for maps.",
+  "main": "app.js",
   "scripts": {
+    "start": "node app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
-  "author": "",
+  "engines": {
+    "node": "22.19.0"
+  },
+  "keywords": [
+    "airbnb",
+    "express",
+    "nodejs",
+    "mongodb",
+    "cloudinary",
+    "leaflet"
+  ],
+  "author": "Manju L",
   "license": "ISC",
   "dependencies": {
     "axios": "^1.12.2",
@@ -18,7 +26,7 @@
     "connect-flash": "^0.1.1",
     "connect-mongo": "^5.1.0",
     "cookie-parser": "^1.4.7",
-    "dotenv": "^17.2.3",
+    "dotenv": "^16.4.5",
     "ejs": "^3.1.10",
     "ejs-mate": "^4.0.0",
     "express": "^5.1.0",
